--- a/src/components/courses/styles.sass
+++ b/src/components/courses/styles.sass
@@ -20,7 +20,10 @@ $silver: #d7d7d7
         h6
           font-size: 12px
      
-     
+.dv-star-rating
+  height: 12px
+  font-size: 10px
+      
 .u-position-absolute
   position: absolute
 
