--- a/src/components/publication/styles.sass
+++ b/src/components/publication/styles.sass
@@ -6,7 +6,7 @@
     top: 16px
     background-color: rgba(0, 0, 0, 0.5)
     z-index: 10
-    height: 76%
+    height: 84%
     width: 80%
     display: flex
     align-items: center
@@ -14,12 +14,11 @@
     opacity: 0
     border-radius: 8px
     margin: 0 auto
-.purchase-btn
-    opacity: 0  
+    cursor: pointer 
 .publication-img
   position: relative
   &:hover
-      .publication-overlay, .purchase-btn
+      .publication-overlay
           opacity: 1
           transition: opacity ease-out 0.3s
      
