--- a/src/components/shared/card/styles.sass
+++ b/src/components/shared/card/styles.sass
@@ -14,7 +14,7 @@
 .course-card:hover
    .card-body
      margin-top: -30px
-     transition: margin-top ease-out 0.3s
+     transition: all ease-out 0.3s
      p
         display: block
         animation: fadein 2s
