--- a/src/index.sass
+++ b/src/index.sass
@@ -42,7 +42,9 @@ a:hover, a:focus, a:active
 .br-5
     border-radius: 5px !important
 .w-40
-    width: 40% !important    
+    width: 40% !important
+.h-55
+    height: 55px        
 .radius-top-0
     border-top-right-radius: 0px !important
     border-top-left-radius: 0px !important
