About us slider, card hover animation, free lectures carousel

--- a/src/components/shared/card/styles.sass
+++ b/src/components/shared/card/styles.sass
@@ -1,55 +1,78 @@
 .course-card
-   min-height: 300px
-   .card-img-top
-      height: 180px
-      object-fit: cover
-      object-position: center
-   .card-body
-     .card-title
-        min-height: 30px
-        margin-bottom: 5px
-   .card-body>p
-      min-height: 30px
-      display: none     
-.course-card:hover
-   .card-body
-     margin-top: -30px
-     transition: all ease-out 0.3s
-     p
-        display: block
-        animation: fadein 2s
-        -moz-animation: fadein 2s
-        -webkit-animation: fadein 2s
-        -o-animation: fadein 2s
-      
+  background-color: #FFF
+  min-height: 300px
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1)
+  overflow: hidden
+  -webkit-transition: box-shadow 0.5s
+  transition: box-shadow 0.5s
+  &:hover
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.3)
 
-@keyframes fadein
-  from
-    display: none
-
-  to
+.card-thumb
+  height: 180px
+  object-fit: cover
+  overflow: hidden
+  background-color: #000
+  -webkit-transition: height 0.5s
+  transition: height 0.5s
+  img
+    width: 100%
     display: block
+    opacity: 1
+    -webkit-transform: scale(1)
+    transform: scale(1)
+    -webkit-transition: opacity 0.5s, -webkit-transform 0.5s
+    transition: opacity 0.5s, -webkit-transform 0.5s
+    transition: opacity 0.5s, transform 0.5s
+    transition: opacity 0.5s, transform 0.5s, -webkit-transform 0.5s
+
+.course-card:hover .card-thumb
+  height: 130px
+  img
+    opacity: 0.6
+    -webkit-transform: scale(1.2)
+    transform: scale(1.2)
+
+.card-body
+  position: relative
+  height: 100px
+  padding: 20px
+  -webkit-transition: height 0.5s
+  transition: height 0.5s
+
+.course-card:hover .card-body
+  height: 150px
+
+.card-title
+  margin: 0
+  padding: 0 0 10px 0
+
+.card-subtitle
+  margin: 0
+  padding: 0 0 10px 0
+
+.card-description
+  position: absolute
+  left: 20px
+  right: 20px
+  bottom: 20px
+  opacity: 0
+  -webkit-transform: translateY(45px)
+  transform: translateY(45px)
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s
+  transition: opacity 0.3s, -webkit-transform 0.3s
+  transition: opacity 0.3s, transform 0.3s
+  transition: opacity 0.3s, transform 0.3s, -webkit-transform 0.3s
+  -webkit-transition-delay: 0s
+  transition-delay: 0s
+
+.course-card:hover .card-description
+  opacity: 1
+  -webkit-transform: translateY(0px)
+  transform: translateY(0px)
+  -webkit-transition-delay: 0.2s
+  transition-delay: 0.2s
 
 
-@-moz-keyframes fadein
-  from
-    display: none
 
-  to
-    display: block
-
-
-@-webkit-keyframes fadein
-  from
-    display: none
-
-  to
-    display: block
-
-
-@-o-keyframes fadein
-  from
-    display: none
-
-  to
-    display: block          
+       
