--- a/src/components/courses/styles.sass
+++ b/src/components/courses/styles.sass
@@ -19,7 +19,15 @@ $silver: #d7d7d7
         align-items: center
         h6
           font-size: 12px
-     
+ 
+.play-btn
+  bottom: 0
+  top: 0
+  left: 0
+  right: 0
+  margin: auto
+  border-radius: 50% 
+
 .dv-star-rating
   height: 12px
   font-size: 10px
