--- a/src/index.sass
+++ b/src/index.sass
@@ -277,7 +277,7 @@ a.btn
             font-size: 1.5rem
             text-align: center
             margin-bottom: 25px
-    .testimonials-section
+    .features-section
         padding-top: 60px
         margin-bottom: 70px                   
     .categories-section
