Edits in cart flow

--- a/src/index.sass
+++ b/src/index.sass
@@ -75,7 +75,9 @@ a:hover, a:focus, a:active
 .dark-bg
     background: $dark-blue
 .light-bg
-    background-color: $light-blue 
+    background-color: $light-blue
+.silver-bg
+    background-color: $light-silver
 .off-white-bg
     background-color: $off-white          
 .light-font-text
