Recorded lectures UI

--- a/src/components/shared/card/styles.sass
+++ b/src/components/shared/card/styles.sass
@@ -8,6 +8,15 @@
   &:hover
     box-shadow: 0 0 50px rgba(0, 0, 0, 0.3)
 
+.course-card.card-sm
+  min-height: 170px
+  margin-bottom: 25px
+  .card-thumb
+    height: 100px
+  .card-body
+    height: 40px
+    padding: 10px 15px 10px 15px  
+
 .card-thumb
   height: 180px
   object-fit: cover
