--- a/src/index.sass
+++ b/src/index.sass
@@ -260,6 +260,7 @@ a.btn
     background-color: #fbfbfb       
 .unset-height
     height: unset !important
+    min-height: unset !important
  
 .box-layout
    border: 1px solid $silver
