Recorded videos UI

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -17,3 +17,12 @@
     padding: 10px 15px 10px 15px 
     -webkit-transition: height 0.5s
     transition: height 0.5s
+
+.custom-control-label::before
+  background-color: transparent
+  width: 0.8rem
+  height: 0.8rem
+  top: 3px  
+.light-hr
+  border-top: 1px solid #ddd6f2
+ 
