--- a/src/index.sass
+++ b/src/index.sass
@@ -7,7 +7,9 @@ $red: #f66271
 $silver: #dbdbdb
 $light-silver: #f2f2f2 
 $dark-silver: #a9acb4
-$off-white: #fefefe 
+$off-white: #fefefe
+$light-purple: #ddd6f2
+
 @font-face 
     font-family: GessLight 
     src: url("/assets/fonts/GESSLight.otf") 
@@ -78,6 +80,8 @@ a:hover, a:focus, a:active
     background-color: $light-blue
 .silver-bg
     background-color: $light-silver
+.light-purple-text
+    color: $light-purple    
 .off-white-bg
     background-color: $off-white          
 .light-font-text
