--- a/src/components/account/shared/sidebar/styles.sass
+++ b/src/components/account/shared/sidebar/styles.sass
@@ -24,7 +24,7 @@ $mid-blue: #6c53bf
     .sidebar-list
         padding-top: 25px
         padding-bottom: 20px
-        ul>li
+        ul>li>a
             margin-bottom: 15px
             padding-right: 15px
             height: 30px
