Course booklet UI

--- a/src/components/account/settings/styles.sass
+++ b/src/components/account/settings/styles.sass
@@ -29,5 +29,7 @@ $yellow: #ffe552
     margin-left: 25px
 .bs-tooltip-auto[x-placement^=bottom] .arrow::before, .bs-tooltip-bottom .arrow::before
     border-bottom-color: #f2fdfe
+.bs-tooltip-auto[x-placement^=top] .arrow::before, .bs-tooltip-top .arrow::before
+    border-top-color: #f2fdfe    
 .tooltip.show
     opacity: 1    
