--- a/src/components/account/shared/sidebar/styles.sass
+++ b/src/components/account/shared/sidebar/styles.sass
@@ -25,15 +25,15 @@ $mid-blue: #6c53bf
         padding-top: 25px
         padding-bottom: 20px
         ul>li>a
-            margin-bottom: 15px
+            margin-bottom: 7px
+            margin-top: 7px
             padding-right: 15px
             height: 30px
             display: flex
             align-items: center
             &.active
                 border-right: 3px solid $light-blue
-            &:last-child
-                margin-bottom: 0px
+
     .separator
         width: 90%
         border-top: 1px solid #dbdbdb             
