--- a/src/index.sass
+++ b/src/index.sass
@@ -201,7 +201,15 @@ a.btn
     &:hover, &:focus
         background-color: $light-blue
         color: $white
-        transition: background-color ease-out 0.3s  
+        transition: background-color ease-out 0.3s
+.blue-border-btn
+    border: 1px solid $light-blue
+    color: $light-blue
+    font-size: 11px
+    &:hover, &:focus
+        background-color: $light-blue
+        color: $white
+        transition: background-color ease-out 0.3s          
 .silver-outline-btn
     border-radius: 50px
     border: 1px solid #fbfbfb
@@ -264,8 +272,8 @@ a.btn
     background-color: #fbfbfb       
 .unset-height
     height: unset !important
-    min-height: unset !important
- 
+.btn-radius
+    border-radius: .2rem !important 
 .box-layout
    border: 1px solid $silver
    border-radius: 5px
