--- a/src/components/shared/card/styles.sass
+++ b/src/components/shared/card/styles.sass
@@ -42,12 +42,13 @@
     -webkit-transform: scale(1.2)
     transform: scale(1.2)
 
-.card-body
-  position: relative
-  height: 100px
-  padding: 20px
-  -webkit-transition: height 0.5s
-  transition: height 0.5s
+.course-card
+  .card-body
+    position: relative
+    height: 100px
+    padding: 20px
+    -webkit-transition: height 0.5s
+    transition: height 0.5s
 
 .course-card:hover .card-body
   height: 150px
