Gender validation in registration, collapsible, logout, and rating in live-stream

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -30,7 +30,6 @@
   border: 1px solid #dfdfdf
   border-radius: 5px
   background-color: #fbfbfb
-  margin-bottom: 15px
   .tab-content
     border-top: 1px solid #dfdfdf
     padding: 10px 0px 0px 0px
@@ -112,3 +111,16 @@
     background-color: #f4f4f4
     cursor: pointer
     transition: all ease-out 0.3s
+
+.accordion-head
+  background-color: #9786d2 !important
+  padding: 10px 15px 10px 15px !important
+  margin-bottom: 10px
+.accordion-head:hover
+  background-color: #6c53bf !important
+  transition: background-color ease-out 0.3s  
+.panel-accordion
+  padding: 0px !important
+  margin-bottom: 15px  
+
+  
