--- a/src/components/shared/card/styles.sass
+++ b/src/components/shared/card/styles.sass
@@ -34,6 +34,8 @@
     transition: opacity 0.5s, -webkit-transform 0.5s
     transition: opacity 0.5s, transform 0.5s
     transition: opacity 0.5s, transform 0.5s, -webkit-transform 0.5s
+    height: 180px
+    object-fit: cover
 
 .course-card:hover .card-thumb
   height: 130px
