--- a/src/components/account/shared/sidebar/styles.sass
+++ b/src/components/account/shared/sidebar/styles.sass
@@ -38,8 +38,11 @@ $mid-blue: #6c53bf
         width: 90%
         border-top: 1px solid #dbdbdb             
     .footer
-        padding: 20px
         border-bottom: 1px solid #dbdbdb
+        padding: 20px 0px 20px 0px
+        a.active
+            border-right: 3px solid $light-blue
+            padding: 0px 20px 0px 20px
     .settings
         padding: 15px
         span
