--- a/src/index.sass
+++ b/src/index.sass
@@ -296,6 +296,8 @@ a.btn
     background-color: #fbfbfb       
 .unset-height
     height: unset !important
+.box-height
+    min-height: 400px    
 .btn-radius
     border-radius: .2rem !important 
 .box-layout
