--- a/src/components/account/shared/sidebar/styles.sass
+++ b/src/components/account/shared/sidebar/styles.sass
@@ -40,9 +40,11 @@ $mid-blue: #6c53bf
     .footer
         border-bottom: 1px solid #dbdbdb
         padding: 20px 0px 20px 0px
+        a
+            padding: 0px 20px 0px 20px
         a.active
             border-right: 3px solid $light-blue
-            padding: 0px 20px 0px 20px
+            
     .settings
         padding: 15px
         span
