--- a/src/index.sass
+++ b/src/index.sass
@@ -52,7 +52,9 @@ a:hover, a:focus, a:active
 .h-40
     height: 40px        
 .h-80
-    height: 80px            
+    height: 80px
+.h-65
+    height: 65px                 
 .radius-top-0
     border-top-right-radius: 0px !important
     border-top-left-radius: 0px !important
