--- a/src/components/new-cart/cart.styles.sass
+++ b/src/components/new-cart/cart.styles.sass
@@ -4,3 +4,14 @@
    right: -14px   
 .light-silver-bg
    background-color: #FBFBFB
+  
+@media only screen and (max-width: 767px)
+    .responsive-item 
+       min-height: 180px
+       flex-direction: column
+       .w-25
+          margin-top: 15px
+    .ReactModal__Content.ReactModal__Content--after-open
+      width: 95% !important
+      height: 85% !important
+       
