--- a/src/components/new-cart/checkout.styles.sass
+++ b/src/components/new-cart/checkout.styles.sass
@@ -81,3 +81,7 @@ $off-white: #fefefe
     .box-body
         border-bottom-left-radius: 5px
         border-bottom-right-radius: 5px         
+
+@media only screen and (max-width: 767px)
+    .custom-tabs
+        width: 100% !important         
