--- a/src/components/shared/header/styles.sass
+++ b/src/components/shared/header/styles.sass
@@ -86,6 +86,8 @@ $mid-blue: #6c53bf
                   transition: all ease-out 0.3s
                           
  
-     
+@media only screen and (max-width: 767px)
+    .header .navbar .navbar-nav .nav-item
+        text-align: right  
 
          
