--- a/src/components/account/shared/lecture/styles.sass
+++ b/src/components/account/shared/lecture/styles.sass
@@ -4,3 +4,7 @@
     background-image: linear-gradient(97deg, #2bc3cc, #6c53bf)
     height: 100px
     padding: 0px 25px 0px 25px
+
+@media only screen and (max-width: 767px)
+    .lecture-item
+        min-height: 150px    
