--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -123,4 +123,7 @@
   padding: 0px !important
   margin-bottom: 15px  
 
-  
+@media only screen and (max-width: 767px)                          
+    .responsive-margin
+      margin-top: 15px
+   
