--- a/src/index.sass
+++ b/src/index.sass
@@ -45,6 +45,8 @@ a:hover, a:focus, a:active
     border-radius: 5px !important
 .w-40
     width: 40% !important
+.w-20
+    width: 20% !important    
 .h-55
     height: 55px
 .h-45
