--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -123,6 +123,50 @@
   padding: 0px !important
   margin-bottom: 15px  
 
+
+.chat-window
+  .chat-history
+    padding: 30px 15px 20px
+    border-bottom: 2px solid white
+    overflow-y: scroll
+    height: 575px
+    .message-data
+      text-align: left
+      margin-bottom: 5px
+      color: #707070
+      font-size: 12px
+      margin-left: 35px
+    .message
+      font-size: 12px
+      padding: 15px
+      border-radius: 7px
+      width: 70%
+      position: relative
+    .my-message
+      background: #9786d2
+      border-bottom-right-radius: 0px
+    .other-message
+      background: #f5f5f5
+      border-bottom-left-radius: 0px
+      &:after
+        border-bottom-color: #94c2ed
+        left: 93%
+  .chat-message
+    padding: 15px
+    .input-chat
+      position: relative
+      input
+        height: 50px
+    .options
+      position: absolute
+      top: 14px
+      left: 5px
+      li
+        width: 20px
+        margin-left: 10px
+        text-align: center
+
+
 @media only screen and (max-width: 767px)                          
     .responsive-margin
       margin-top: 15px
