--- a/src/components/shared/card/styles.sass
+++ b/src/components/shared/card/styles.sass
@@ -21,7 +21,7 @@
   height: 180px
   object-fit: cover
   overflow: hidden
-  background-color: #000
+  background-color: #FFF
   -webkit-transition: height 0.5s
   transition: height 0.5s
   img
