--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -32,8 +32,6 @@
   background-color: #fbfbfb
   .tab-content
     border-top: 1px solid #dfdfdf
-    padding: 10px 0px 0px 0px
-    height: 300px
     position: relative
     .chat-item
       padding-right: 15px
@@ -46,7 +44,11 @@
         .chat-img
           opacity: 1
       .chat-img
-        opacity: 0   
+        opacity: 0
+    .chat-box
+      height: 360px
+      overflow-y: scroll
+      padding-bottom: 50px       
 .chat-tabs
   li
     .nav-link
@@ -67,20 +69,14 @@
   -webkit-border-radius: 4px
   border-radius: 4px
   max-width: 100%
-  padding: 15px
+  padding: 10px
   position: relative
-  margin-top: 20px
+  margin-top: 5px
+  margin-bottom: 10px
   border: solid 1px #dbdbdb
   p
     color: #a9acb4
     font-size: 9px
-  &::before
-    border-left: 15px solid transparent
-    border-bottom: 15px solid #f7f7f7
-    top: -15px
-    content: ""
-    position: absolute
-    right: 10px
 
 .chat-input
   position: absolute
