--- a/src/index.sass
+++ b/src/index.sass
@@ -167,11 +167,11 @@ form
         color: $red
         font-size: 10px
         padding-top: 5px
-    .input-error>.input-group-prepend>.input-group-text, .input-error>input.form-control, .input-error>.intl-tel-input>input, .input-error>select.form-control, .input-error>.rdt>input.form-control
+    .input-error>.input-group-prepend>.input-group-text, .input-error>input.form-control, .input-error>textarea.form-control, .input-error>.intl-tel-input>input, .input-error>select.form-control, .input-error>.rdt>input.form-control
         border: 1px solid $red
         svg
             color: $red 
-    .input-success>.input-group-prepend>.input-group-text, .input-success>input.form-control, .input-success>.intl-tel-input>input, .input-success>select.form-control
+    .input-success>.input-group-prepend>.input-group-text, .input-success>input.form-control, .input-success>textarea.form-control, .input-success>.intl-tel-input>input, .input-success>select.form-control
         border: 1px solid $light-blue
         svg
             color: $light-blue
