--- a/src/index.sass
+++ b/src/index.sass
@@ -107,6 +107,8 @@ a:hover, a:focus, a:active
     object-fit: contain
 .smaller
     font-size: 65% !important
+.font-16
+    font-size: 16px    
 .light-border
     border: 1px solid $light-blue !important 
 .white-border
@@ -171,7 +173,7 @@ form
         border: 1px solid $red
         svg
             color: $red 
-    .input-success>.input-group-prepend>.input-group-text, .input-success>input.form-control, .input-success>textarea.form-control, .input-success>.intl-tel-input>input, .input-success>select.form-control
+    .input-success>.input-group-prepend>.input-group-text, .input-success>input.form-control, .input-success>textarea.form-control, .input-success>.intl-tel-input>input, .input-success>select.form-control, .input-success>.rdt>input.form-control
         border: 1px solid $light-blue
         svg
             color: $light-blue
@@ -246,6 +248,8 @@ a.btn
     direction: ltr
     width: 100%
     font-family: MontserratMedium
+    .country-list
+        z-index: 12
 .phone-button
     width: 32px
     height: 32px
