--- a/src/components/home/styles.sass
+++ b/src/components/home/styles.sass
@@ -27,7 +27,13 @@ $off-white: #fefefe
     border-radius: 50%
     background-color: $dark-blue
 .carousel-caption
-  padding-bottom: 10px
+  padding-bottom: 0px
+  padding-top: 0px
+  position: absolute
+  top: 50%
+  -ms-transform: translateY(-50%)
+  transform: translateY(-50%)
+ 
 
 
 .featureSlider .image-gallery-content
