--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -18,6 +18,9 @@
     -webkit-transition: height 0.5s
     transition: height 0.5s
 
+.card-sm.custom-height
+  min-height: 140px
+
 .custom-control-label::before
   background-color: transparent
   width: 0.8rem
