--- a/src/components/account/settings/styles.sass
+++ b/src/components/account/settings/styles.sass
@@ -39,6 +39,10 @@ $yellow: #ffe552
     opacity: 1    
 .right-input-icon
   top: 10px
+  right: 35px
+  z-index: 10  
+.edit-input-icon
+  top: 10px
   right: 10px
   z-index: 10
 .left-input-icon
@@ -47,3 +51,16 @@ $yellow: #ffe552
   z-index: 10
 .left-input-icon.custom-top
   top: 14px  
+.popover
+  background-color: #f2fdfe
+  border: solid 1px rgba(43, 195, 204, 0.23)
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+  .popover-body
+    padding: 10px 20px 
+.bs-popover-auto[x-placement^=right] .arrow::after, .bs-popover-right .arrow::after
+  border-right-color: #f2fdfe
+.bs-popover-auto[x-placement^=right] .arrow::before, .bs-popover-right .arrow::before
+  border-right-color: rgba(43, 195, 204, 0.23)
