--- a/src/index.sass
+++ b/src/index.sass
@@ -46,7 +46,9 @@ a:hover, a:focus, a:active
 .w-40
     width: 40% !important
 .w-20
-    width: 20% !important    
+    width: 20% !important
+.w-32
+    width: 32%        
 .h-55
     height: 55px
 .h-45
@@ -62,9 +64,17 @@ a:hover, a:focus, a:active
     border-top-left-radius: 0px !important
 .radius-bottom-0
     border-bottom-left-radius: 0px !important
-    border-bottom-right-radius: 0px !important           
+    border-bottom-right-radius: 0px !important
+.left-radius-0
+    border-top-left-radius: 0px !important
+    border-bottom-left-radius: 0px !important 
+.left-radius-5
+    border-top-left-radius: 5px !important
+    border-bottom-left-radius: 5px !important                       
 .en-text
     font-family: MontserratMedium
+.popover
+    font-family: "GessMedium"    
 .dark-text
     color: $dark-blue !important
 .line-through-text
