--- a/src/index.sass
+++ b/src/index.sass
@@ -217,7 +217,16 @@ a.btn
     &:hover, &:focus
         background-color: $white
         border: 1px solid $dark-blue
-        color: $dark-blue    
+        color: $dark-blue
+.light-btn
+    border: 1px solid $light-blue
+    color: $white
+    font-size: 12px
+    background-color: $light-blue
+    &:hover, &:focus
+        background-color: $white
+        border: 1px solid $light-blue
+        color: $light-blue           
 .light-outline-btn
     border-radius: 50px
     border: 1px solid $light-blue
