Initiating general channel on chat page load

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -126,7 +126,6 @@
   padding: 0px !important
   margin-bottom: 15px  
 
-
 .chat-window
   .chat-history
     padding: 30px 15px 20px
@@ -183,7 +182,15 @@
   + .emoji-mart-bar
     display: none
 .emoji-mart-search 
-  display: none     
+  display: none
+
+.chat-sidebar
+  .chat-item
+    padding-left: 15px
+    padding-right: 15px
+    &:hover
+      background-color: #f7f7f7
+      transition: background-color ease-out 0.3s         
 @media only screen and (max-width: 767px)                          
     .responsive-margin
       margin-top: 15px
