Subscription details pages integration

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -186,7 +186,11 @@
     padding-right: 15px
     &:hover
       background-color: #f7f7f7
-      transition: background-color ease-out 0.3s         
+      transition: background-color ease-out 0.3s
+
+.recorded-video
+  iframe
+    width: 100%                 
 @media only screen and (max-width: 767px)                          
     .responsive-margin
       margin-top: 15px
