Live stream chat

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -106,6 +106,16 @@
     img
       transform: rotate(180deg)
 
+.chat-header
+  position: absolute
+  top: 0
+  right: 0
+  left: 0
+  background-color: #fbfbfb
+  border-bottom: 1px solid #dfdfdf
+  height: 30px
+  padding-right: 10px
+
 .list-item
   padding-right: 15px
   padding-left: 15px
