New installment UI and post call

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -200,7 +200,9 @@
 
 .recorded-video
   iframe
-    width: 100%                 
+    width: 100% 
+.swal-text
+  text-align: center                    
 @media only screen and (max-width: 767px)                          
     .responsive-margin
       margin-top: 15px
