Edits in reset password flow

--- a/src/index.sass
+++ b/src/index.sass
@@ -350,7 +350,8 @@ a.btn
     input
         direction: ltr 
         font-family: MontserratRegular 
-   
+.swal-text
+    text-align: center   
 @media only screen and (max-width: 767px)
     .w-25, .w-75, .w-40
         width: 100% !important 
