New installment integration, recorded videos integration

--- a/src/components/cart/cart.styles.sass
+++ b/src/components/cart/cart.styles.sass
@@ -13,5 +13,5 @@
           margin-top: 15px
     .ReactModal__Content.ReactModal__Content--after-open
       width: 95% !important
-      height: 85% !important
+      height: auto !important
        
