Second release production edits

--- a/src/index.sass
+++ b/src/index.sass
@@ -51,6 +51,8 @@ a:hover, a:focus, a:active
     width: 32%        
 .h-55
     height: 55px
+.mh-55
+    min-height: 55px    
 .h-45
     height: 45px 
 .h-40
