Schedule UI edits, added link to recorded lectures

--- a/src/index.sass
+++ b/src/index.sass
@@ -89,7 +89,9 @@ a:hover, a:focus, a:active
 .light-text
     color: $light-blue
 .red-text
-    color: $red    
+    color: $red
+.red-bg
+    background-color: $red        
 .mid-text
     color: $mid-blue !important    
 .dark-silver-text
