--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -202,7 +202,13 @@
   iframe
     width: 100% 
 .swal-text
-  text-align: center                    
+  text-align: center
+.card-thumb
+  video
+    object-fit: cover
+  .custom-img
+    height: 80px
+    width: unset                        
 @media only screen and (max-width: 767px)                          
     .responsive-margin
       margin-top: 15px
