Edits in reset flows

--- a/src/index.sass
+++ b/src/index.sass
@@ -357,7 +357,7 @@ a.btn
 .swal-text
     text-align: center   
 @media only screen and (max-width: 767px)
-    .w-25, .w-75, .w-40
+    .w-25, .w-75, .w-40, .w-35
         width: 100% !important 
     .navbar-light .navbar-toggler
         border-color: $white
