Course booklet integration

--- a/src/components/account/settings/styles.sass
+++ b/src/components/account/settings/styles.sass
@@ -62,5 +62,9 @@ $yellow: #ffe552
     padding: 10px 20px 
 .bs-popover-auto[x-placement^=right] .arrow::after, .bs-popover-right .arrow::after
   border-right-color: #f2fdfe
+.bs-popover-auto[x-placement^=bottom] .arrow::after, .bs-popover-bottom .arrow::after
+  border-bottom-color: #f2fdfe  
 .bs-popover-auto[x-placement^=right] .arrow::before, .bs-popover-right .arrow::before
   border-right-color: rgba(43, 195, 204, 0.23)
+.bs-popover-auto[x-placement^=bottom] .arrow::before, .bs-popover-bottom .arrow::before
+  border-bottom-color: rgba(43, 195, 204, 0.23)  
