--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -208,7 +208,10 @@
     object-fit: cover
   .custom-img
     height: 80px
-    width: unset                        
+    width: unset
+.react-pdf__Page__canvas
+  width: 100% !important
+  height: 100% !important                            
 @media only screen and (max-width: 767px)                          
     .responsive-margin
       margin-top: 15px
