--- a/src/components/account/settings/styles.sass
+++ b/src/components/account/settings/styles.sass
@@ -27,6 +27,12 @@ $yellow: #ffe552
     width: 1px
     background-color: $silver
     margin-left: 25px
+.seperator-md
+    float: left
+    height: 60px
+    width: 1px
+    background-color: $silver
+    margin-right: 20px
 .bs-tooltip-auto[x-placement^=bottom] .arrow::before, .bs-tooltip-bottom .arrow::before
     border-bottom-color: #f2fdfe
 .bs-tooltip-auto[x-placement^=top] .arrow::before, .bs-tooltip-top .arrow::before
