--- a/src/index.sass
+++ b/src/index.sass
@@ -48,7 +48,11 @@ a:hover, a:focus, a:active
 .w-20
     width: 20% !important
 .w-35
-    width: 35%        
+    width: 35%
+.w-90
+    width: 90%
+.w-10
+    width: 10%                
 .h-55
     height: 55px
 .h-45
@@ -87,7 +91,9 @@ a:hover, a:focus, a:active
 .light-text
     color: $light-blue
 .red-text
-    color: $red    
+    color: $red
+.red-bg
+    background-color: $red        
 .mid-text
     color: $mid-blue !important    
 .dark-silver-text
