Show more btn in categories, added searchbar

--- a/src/index.sass
+++ b/src/index.sass
@@ -327,6 +327,8 @@ a.btn
     background-color: #fbfbfb       
 .unset-height
     height: unset !important
+.unset-line-height
+    line-height: unset !important    
 .box-height
     min-height: 400px    
 .btn-radius
