1-1 chat bug fixed, voice recording and sending attachments functionalities in chat

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -168,7 +168,7 @@
     .input-chat
       position: relative
       textarea
-        padding-right: 45px
+        padding-right: 100px
       .light-btn
         position: absolute
         top: 10px
@@ -211,7 +211,9 @@
     width: unset
 .react-pdf__Page__canvas
   width: 100% !important
-  height: 100% !important                            
+  height: 100% !important
+.visualizer
+  display: none !important                              
 @media only screen and (max-width: 767px)                          
     .responsive-margin
       margin-top: 15px
