Rendering messages in chat

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -213,7 +213,14 @@
   width: 100% !important
   height: 100% !important
 .visualizer
-  display: none !important                              
+  display: none !important
+.ball-spin-fade-loader > div, 
+  background-color: #4b3a85 !important
+.ball-clip-rotate> div
+  border: 2px solid #9786d2 !important
+  border-bottom-color: transparent !important   
+audio:focus
+  outline: none                                   
 @media only screen and (max-width: 767px)                          
     .responsive-margin
       margin-top: 15px
