--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -157,9 +157,11 @@
     .my-message
       background: #9786d2
       border-bottom-right-radius: 0px
+      word-break: break-all
     .other-message
       background: #f5f5f5
       border-bottom-left-radius: 0px
+      word-break: break-all
       &:after
         border-bottom-color: #94c2ed
         left: 93%
@@ -169,6 +171,7 @@
       position: relative
       textarea
         padding-right: 100px
+        padding-left: 65px
       .light-btn
         position: absolute
         top: 10px
