--- a/src/index.sass
+++ b/src/index.sass
@@ -328,7 +328,9 @@ a.btn
     width: 70px
     height: 70px
     border-radius: 13.5px
-    background-color: #fbfbfb       
+    background-color: #fbfbfb 
+.gray-box-border
+    border: 1px solid #434343 !important          
 .unset-height
     height: unset !important
 .unset-line-height
