Challenges list and create challenge components UI

--- a/src/index.sass
+++ b/src/index.sass
@@ -49,6 +49,10 @@ a:hover, a:focus, a:active
     width: 20% !important
 .w-35
     width: 35%
+.w-70
+    width: 70%
+.w-15
+    width: 15%        
 .w-90
     width: 90%
 .w-10
@@ -64,7 +68,9 @@ a:hover, a:focus, a:active
 .h-80
     height: 80px
 .h-65
-    height: 65px                 
+    height: 65px
+.table td, .table th
+    vertical-align: middle                     
 .radius-top-0
     border-top-right-radius: 0px !important
     border-top-left-radius: 0px !important
