--- a/src/components/account/subscriptions/challenges/styles.sass
+++ b/src/components/account/subscriptions/challenges/styles.sass
@@ -32,3 +32,11 @@ $off-white: #fefefe
             &:hover
                 border-color: transparent
                 border-bottom: 3px solid transparent
+
+.circle-div
+  height: 35px
+  width: 35px
+  border-radius: 50%
+  margin-bottom: 10px
+
+  
