Booklet watermark position, iframe scrolling issue fixed

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -227,8 +227,10 @@ audio:focus
 
 .watermark
   position: absolute
-  top: 2.5%
-  color: #4b3a85      
+  top: 45%
+  left: 48%
+  color: #4b3a85
+  transform: rotate(90deg)      
 .pdf-wrapper
   background-color: #434343
   height: 60px
@@ -247,7 +249,10 @@ audio:focus
 .scrollable-box
   height: 1000px
   overflow-y: scroll
-  position: relative     
+  position: relative
+.iframeWrapper
+  overflow: auto
+  -webkit-overflow-scrolling: touch       
 @media only screen and (max-width: 767px)                          
     .responsive-margin
       margin-top: 15px
