--- a/src/index.sass
+++ b/src/index.sass
@@ -41,6 +41,8 @@ a:hover, a:focus, a:active
 .btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus, button.active.focus, button.active:focus, button.focus, button:active.focus, button:active:focus, button:focus
   outline: 0
   box-shadow: none
+p
+    word-break: break-all  
 .br-5
     border-radius: 5px !important
 .w-40
