--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -203,7 +203,8 @@
 
 .recorded-video
   iframe
-    width: 100% 
+    width: 100%
+    height: 350px 
 .swal-text
   text-align: center
 .card-thumb
@@ -252,7 +253,10 @@ audio:focus
   position: relative
 .iframeWrapper
   overflow: auto
-  -webkit-overflow-scrolling: touch      
+  -webkit-overflow-scrolling: touch   
+.col-height
+  height: 350px
+  overflow: auto    
 @media only screen and (max-width: 767px)                          
     .responsive-margin
       margin-top: 15px
