--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -256,7 +256,9 @@ audio:focus
   -webkit-overflow-scrolling: touch   
 .col-height
   height: 350px
-  overflow: auto    
+  overflow: auto 
+.tooltip-inner
+  max-width: 220px     
 @media only screen and (max-width: 767px)                          
     .responsive-margin
       margin-top: 15px
