--- a/src/index.sass
+++ b/src/index.sass
@@ -172,12 +172,12 @@ form
         border-radius: 5px
         border: 1px solid $silver
         font-size: 13px
-    select.form-control
+    select.form-control 
         color: $silver
         height: 40px
         border-radius: 5px
         border: 1px solid $silver
-        font-size: 12px        
+        font-size: 12px    
     .input-group-text
         background-color: $white
         border: 1px solid $silver
@@ -376,7 +376,7 @@ a.btn
     .w-25, .w-75, .w-40, .w-35
         width: 100% !important 
     .navbar-light .navbar-toggler
-        border-color: $white
+        border-color: #dfdfdf
     .hero-section
         margin-top: 50px
         margin-bottom: 25px
