Banks and faq pages created, delete item btn in cart and checkout, slug instead of id in urls

--- a/src/components/cart/cart.styles.sass
+++ b/src/components/cart/cart.styles.sass
@@ -1,7 +1,7 @@
 .close-btn
    position: absolute
-   top: -14px
-   right: -14px   
+   top: 5px
+   left: 5px
 .light-silver-bg
    background-color: #FBFBFB
   
