--- a/src/index.sass
+++ b/src/index.sass
@@ -201,6 +201,7 @@ form
             color: $red 
     .input-success>.input-group-prepend>.input-group-text, .input-success>input.form-control, .input-success>textarea.form-control, .input-success>.intl-tel-input>input, .input-success>select.form-control, .input-success>.rdt>input.form-control
         border: 1px solid $light-blue
+        color: $dark-blue
         svg
             color: $light-blue
 input
@@ -371,7 +372,9 @@ a.btn
         direction: ltr 
         font-family: MontserratRegular 
 .swal-text
-    text-align: center       
+    text-align: center
+.accordion__title:hover
+    transition: background-color ease-out 0.3s              
 @media only screen and (max-width: 767px)
     .w-25, .w-75, .w-40, .w-35
         width: 100% !important 
