Online payment UI

--- a/src/index.sass
+++ b/src/index.sass
@@ -53,6 +53,8 @@ p
     width: 35%
 .w-70
     width: 70%
+.w-60
+    width: 60%
 .w-15
     width: 15%        
 .w-90
@@ -191,6 +193,10 @@ form
     input.ltr-input::-webkit-input-placeholder
         direction: rtl
         font-family: GessMedium
+    input.en-input::-webkit-input-placeholder
+        font-family: MontserratMedium
+        direction: ltr
+        text-align: center  
     small
         color: $red
         font-size: 10px
