--- a/src/index.sass
+++ b/src/index.sass
@@ -196,7 +196,9 @@ form
     input.en-input::-webkit-input-placeholder
         font-family: MontserratMedium
         direction: ltr
-        text-align: center  
+        text-align: center
+    .form-control[readonly]
+        background-color: $white      
     small
         color: $red
         font-size: 10px
