Exam details UI

--- a/src/index.sass
+++ b/src/index.sass
@@ -140,7 +140,9 @@ p
 .light-border
     border: 1px solid $light-blue !important 
 .white-border
-    border: 1px solid $white !important                    
+    border: 1px solid $white !important
+.text-break
+    word-break: break-word                       
 .underlined-tabs
     li
         width: 100px
