Hint modal UI, exam details UI adjustments

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -256,7 +256,24 @@ audio:focus
   -webkit-overflow-scrolling: touch   
 .col-height
   height: 350px
-  overflow: auto 
+  overflow: auto
+.slick-center
+  background-color: #f2f2f2
+.question-item
+  .slick-slider
+    .slick-prev
+      left: -10px
+      background: white
+    .slick-next
+      right: -10px
+      background: white
+    .slick-prev:before, .slick-next:before
+      color: #2bc3cc
+      opacity: 1
+.hint-badge
+  position: absolute
+  top:  -10px
+  right: 30px          
 .tooltip-inner
   max-width: 220px     
 @media only screen and (max-width: 767px)                          
