--- a/src/index.sass
+++ b/src/index.sass
@@ -73,6 +73,8 @@ p
     height: 80px
 .h-65
     height: 65px
+.br-0
+    border-radius: 0px !important   
 .table td, .table th
     vertical-align: middle                     
 .radius-top-0
@@ -113,7 +115,9 @@ p
 .silver-text
     color: $silver
 .light-silver-text
-    color: #fbfbfb        
+    color: #fbfbfb
+.green-text
+    color: #109201            
 .dark-bg
     background: $dark-blue
 .mid-bg
