Online payment integration

--- a/src/components/cart/checkout.styles.sass
+++ b/src/components/cart/checkout.styles.sass
@@ -81,7 +81,10 @@ $off-white: #fefefe
     .box-body
         border-bottom-left-radius: 5px
         border-bottom-right-radius: 5px         
-
+.payment-img
+    position: absolute
+    top: 5px
+    right: 25px
 @media only screen and (max-width: 767px)
     .custom-tabs
         width: 100% !important         
