--- a/src/index.sass
+++ b/src/index.sass
@@ -293,7 +293,12 @@ a.btn
     &:hover, &:focus
         background-color: #fbfbfb
         color: $dark-blue
-        transition: background-color ease-out 0.3s         
+        transition: background-color ease-out 0.3s
+.red-outline-btn
+    border: 1px solid $red
+    color: $red
+    font-size: 13px
+    cursor: pointer              
 .intl-tel-input
     direction: ltr
     width: 100%
