--- a/src/index.sass
+++ b/src/index.sass
@@ -101,7 +101,9 @@ p
     border-top-left-radius: 0px !important
     border-bottom-left-radius: 0px !important
 .justify-content-evenly
-    justify-content: space-evenly    
+    justify-content: space-evenly
+.word-break
+    word-break: break-word        
 .light-text
     color: $light-blue
 .red-text
