Exams flow integration

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -299,6 +299,10 @@ audio:focus
   background-color: transparent
   &:checked
     background-color: #f66271
+
+.quiz-accordion
+  .accordion__title
+    height: 60px    
 @media only screen and (max-width: 767px)                          
     .responsive-margin
       margin-top: 15px
