Comments/replies integration

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -302,7 +302,14 @@ audio:focus
 
 .quiz-accordion
   .accordion__title
-    height: 60px    
+    height: 60px
+
+.textarea-icon
+  position: absolute
+  left: 10px
+  bottom: 10px
+  cursor: pointer
+  margin-bottom: 0        
 @media only screen and (max-width: 767px)                          
     .responsive-margin
       margin-top: 15px
